--- a/playbooks/demo.yml
+++ b/playbooks/demo.yml
@@ -18,7 +18,7 @@
         <html>
         <body>
         <h1>it works!</h1>
-        Que Bon0to!
+        Que Bonito!
         Que Bonito!
         Que Bonito!
         </body>
